fixed table on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,28 +2,11 @@
   text-align: center;
 }
 
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-/* .react-tabs{
-  width: 100%;
-} */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  overflow: auto;
 }
 
 .rsm-svg{
